# story_teller

./: .env_local  MIT-license.txt  README.md  notes.md  prompts.toml  pyproject.toml  start.ps1
docs/: kick_off_prompt.txt  midjourney_flow.bpmn  mymidjourney.txt  story_workflow.bpmn
story_teller/: story_teller_main_cli.py
story_teller/config/: config.py  toml_support.py
story_teller/model/: chapter_info.py  developed_chapter.py  novel_content.py
story_teller/mymidjourney/: button.py  common.py  config.py  imagine.py  message.py  process_image_generation.py
story_teller/mymidjourney/model/: error.py  imagine_result.py  message_result.py
story_teller/mymidjourney/utils/: download_folder.py
story_teller/service/: cleanup_service.py  generate_novel_content.py  markdown_conversion.py  pdf_service.py  simple_chain_service.py  story_callback.py  story_teller_crew.py
story_teller/test/: test_cleanup.py  test_config.py  test_generate_novel_prompt.py  test_image_dall_e_tool.py  test_markdown_conversion.py  test_model.py  test_mymidjourney_imagine_result.py  test_mymidjourney_message_result.py
story_teller/test/provider/: chapter_content_provider.py  novel_content_provider.py
story_teller/tools/: chapter_extractor.py  image_dall_e_tool.py  mymidjourney_tool.py
story_teller/ui/wx/: main.py  tab_config.py  tab_main.py  ui_helper.py
templates/: story_conversion.html
